_sass/minima/base.scss
/**
 * Reset some basic elements
 */
body, h1, h2, h3, h4, h5, h6,
p, blockquote, pre, hr,
dl, dd, ol, ul, figure {
  margin: 0;
  padding: 0;
}

h3 {
  padding-top: 15px;
}

/**
 * Basic styling
 */
body {
  font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
  color: $text-color;
  background-color: $background-color;
  -webkit-text-size-adjust: 100%;
  -webkit-font-feature-settings: "kern" 1;
     -moz-font-feature-settings: "kern" 1;
       -o-font-feature-settings: "kern" 1;
          font-feature-settings: "kern" 1;
  font-kerning: normal;
}



/**
 * Set `margin-bottom` to maintain vertical rhythm
 */
h1, h2, h3, h4, h5, h6,
p, blockquote, pre,
ul, ol, dl, figure,
%vertical-rhythm {
  margin-bottom: $spacing-unit / 2;
}



/**
 * Images
 */
img {
  max-width: 100%;
  vertical-align: middle;
}

#load_comments {
  float: right;
  width: 86px;
  height: 16px;
  background-image: url(https://c.disquscdn.com/next/embed/assets/img/sprite.b4130d9ff4208cc87ff6d649fd1dc064.png);
  background-position: 0 -38px;
  background-size: 86px 142.5px;
  margin-top: -19px;
}


/**
 * Figures
 */
figure > img {
  display: block;
}

figcaption {
  font-size: $small-font-size;
}



/**
 * Lists
 */
ul, ol {
  margin-left: $spacing-unit;
}

li {
  > ul,
  > ol {
    margin-bottom: 0;
  }
}



/**
 * Headings
 */
h1, h2, h3, h4, h5, h6 {
  font-weight: $base-font-weight;
}



/**
 * Links
 */
a {
  color: $brand-color;
  text-decoration: none;

  &:visited {
    color: darken($brand-color, 15%);
  }

  &:hover {
    color: $text-color;
    text-decoration: underline;
  }

  .social-media-list &:hover {
    text-decoration: none;

    .username {
      text-decoration: underline;
    }
  }
}


/**
 * Blockquotes
 */
blockquote {
  color: $grey-color;
  border-left: 4px solid $grey-color-light;
  padding-left: $spacing-unit / 2;
  @include relative-font-size(1.125);
  letter-spacing: -1px;
  font-style: italic;

  > :last-child {
    margin-bottom: 0;
  }
}



/**
 * Code formatting
 */
pre,
code {
  @include relative-font-size(0.85);
  font-family: 'Source Code Pro', monospace;
}

code {
  padding: 1px 3px;
  font-family: 'Source Code Pro', monospace;
}

pre {
  padding: 8px 12px;
  overflow-x: auto;
  white-space: pre-wrap;

  border: 1px solid $grey-color-light;
  border-radius: 3px;
  background-color: #f8f8f8;

  font-family: 'Source Code Pro', monospace;

  > code {
    border: 0;
    padding-right: 0;
    padding-left: 0;
    line-height: 1.1em;
  }

  /* highlight */
  > b {
    font-style: normal;
    font-weight: bold;
  }

  /* greyed out side info */
  > i {
    font-style: normal;
    font-weight: 300;
    color: #bbb;
  }

  /* green comment */
  > u {
    font-style: normal;
    font-weight: normal;
    color: #009933;
  }
}



/**
 * Header hover anchor links
 */
.header-link {
  display: none;
  padding: 0.1em 10px;
  font-size: 0.8em;
}

h2:hover .header-link,
h3:hover .header-link,
h4:hover .header-link,
h5:hover .header-link,
h6:hover .header-link {
  display: inline;
  color: #2a7ae2;
  text-decoration: underline;
}



/**
 * Wrapper
 */
.wrapper {
  max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
  max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
  margin-right: auto;
  margin-left: auto;
  padding-right: $spacing-unit;
  padding-left: $spacing-unit;
  @extend %clearfix;

  @include media-query($on-laptop) {
    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
    max-width:         calc(#{$content-width} - (#{$spacing-unit}));
    padding-right: $spacing-unit / 2;
    padding-left: $spacing-unit / 2;
  }
}



/**
 * Clearfix
 */
%clearfix:after {
  content: "";
  display: table;
  clear: both;
}



/**
 * Icons
 */
.icon > svg {
  display: inline-block;
  vertical-align: middle;

  path {
    fill: $grey-color;
  }
}

.social-media-list {
  .icon {
    padding-right: 5px;
  }

  li + li {
    padding-top: 5px;
  }
}

